--- a/images.tex
+++ b/images.tex
@@ -1038,6 +1038,8 @@ stringstyle=\color{orange}}
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{section}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{subsection}
@@ -1065,9 +1067,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline12858}%
+\lthtmlinlinemathA{tex2html_wrap_inline12910}%
 
-% latex2html id marker 12858
+% latex2html id marker 12910
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
