--- a/images.tex
+++ b/images.tex
@@ -1040,6 +1040,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{subsection}
@@ -1067,9 +1070,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline12910}%
+\lthtmlinlinemathA{tex2html_wrap_inline12977}%
 
-% latex2html id marker 12910
+% latex2html id marker 12977
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
