--- a/images.tex
+++ b/images.tex
@@ -1037,6 +1037,7 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{chapter}
 \stepcounter{section}
+\stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1070,9 +1071,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline12977}%
+\lthtmlinlinemathA{tex2html_wrap_inline13009}%
 
-% latex2html id marker 12977
+% latex2html id marker 13009
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
