--- a/images.tex
+++ b/images.tex
@@ -9,6 +9,7 @@
 \usepackage{latexsym,amsfonts,amssymb,amstext,amsthm,float,amsmath,dsfont}
 \usepackage[spanish]{babel}    
 \usepackage{ucs}
+\usepackage{color}
 \usepackage[utf8x]{inputenc}
 \usepackage{alltt}
 \usepackage{html}
@@ -832,8 +833,6 @@ stringstyle=\color{orange}}
 
 
 
-\usepackage[dvips]{color}
-
 
 \pagecolor[gray]{.7}
 
@@ -1073,9 +1072,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline13166}%
+\lthtmlinlinemathA{tex2html_wrap_inline13209}%
 
-% latex2html id marker 13166
+% latex2html id marker 13209
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
