--- a/images.tex
+++ b/images.tex
@@ -1039,6 +1039,7 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
+\stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1072,9 +1073,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline13215}%
+\lthtmlinlinemathA{tex2html_wrap_inline13250}%
 
-% latex2html id marker 13215
+% latex2html id marker 13250
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
