--- a/images.tex
+++ b/images.tex
@@ -1040,6 +1040,8 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
+\stepcounter{subsection}
+\stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1073,9 +1075,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline13267}%
+\lthtmlinlinemathA{tex2html_wrap_inline13317}%
 
-% latex2html id marker 13267
+% latex2html id marker 13317
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
