--- a/images.tex
+++ b/images.tex
@@ -1037,6 +1037,12 @@ stringstyle=\color{orange}}
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{subsection}
+{\newpage\clearpage
+\lthtmlinlinemathA{tex2html_wrap_inline12914}%
+$ A \leftarrow e$%
+\lthtmlinlinemathZ
+\lthtmlcheckvsize\clearpage}
+
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
@@ -1050,20 +1056,20 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
-\stepcounter{subsection}
-\stepcounter{subsection}
-\stepcounter{section}
-\stepcounter{subsection}
-\stepcounter{subsection}
-\stepcounter{subsection}
-\stepcounter{section}
-\stepcounter{section}
-\stepcounter{section}
-\stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{section}
+\stepcounter{subsection}
+\stepcounter{subsection}
+\stepcounter{section}
+\stepcounter{subsection}
+\stepcounter{subsection}
+\stepcounter{subsection}
+\stepcounter{section}
+\stepcounter{section}
+\stepcounter{section}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1074,14 +1080,6 @@ stringstyle=\color{orange}}
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{subsection}
-{\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline13317}%
-
-% latex2html id marker 13317
-$ S = program$%
-\lthtmlinlinemathZ
-\lthtmlcheckvsize\clearpage}
-
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
