--- a/images.tex
+++ b/images.tex
@@ -1037,12 +1037,6 @@ stringstyle=\color{orange}}
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{subsection}
-{\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline12914}%
-$ A \leftarrow e$%
-\lthtmlinlinemathZ
-\lthtmlcheckvsize\clearpage}
-
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
@@ -1080,6 +1074,14 @@ $ A \leftarrow e$%
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{subsection}
+{\newpage\clearpage
+\lthtmlinlinemathA{tex2html_wrap_inline13322}%
+
+% latex2html id marker 13322
+$ S = program$%
+\lthtmlinlinemathZ
+\lthtmlcheckvsize\clearpage}
+
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
