--- a/images.tex
+++ b/images.tex
@@ -52,6 +52,10 @@ stringstyle=\color{orange}}
 \providecommand{\yellow}[1]{{\color{yellow} #1}} 
 
 %
+\providecommand{\slim}{ \htmladdnormallink{slim}{http://slim-lang.com/} }%
+\providecommand{\coffeescript}{ \htmladdnormallink{CoffeeScript}{http://coffeescript.org/} } 
+
+%
 \providecommand{\datetofill}{\rule{5mm}{.1pt}/\rule{5mm}{.1pt}/\rule{10mm}{.1pt}} 
 
 %
@@ -1090,9 +1094,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline14678}%
+\lthtmlinlinemathA{tex2html_wrap_inline14704}%
 
-% latex2html id marker 14678
+% latex2html id marker 14704
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
