--- a/images.tex
+++ b/images.tex
@@ -1052,6 +1052,7 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1094,9 +1095,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline14709}%
+\lthtmlinlinemathA{tex2html_wrap_inline14729}%
 
-% latex2html id marker 14709
+% latex2html id marker 14729
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
