--- a/images.tex
+++ b/images.tex
@@ -1053,6 +1053,7 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1095,9 +1096,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline14729}%
+\lthtmlinlinemathA{tex2html_wrap_inline14753}%
 
-% latex2html id marker 14729
+% latex2html id marker 14753
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
