--- a/images.tex
+++ b/images.tex
@@ -1054,6 +1054,7 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1096,9 +1097,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline14753}%
+\lthtmlinlinemathA{tex2html_wrap_inline14786}%
 
-% latex2html id marker 14753
+% latex2html id marker 14786
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
