--- a/images.tex
+++ b/images.tex
@@ -53,7 +53,8 @@ stringstyle=\color{orange}}
 
 %
 \providecommand{\slim}{ \htmladdnormallink{slim}{http://slim-lang.com/} }%
-\providecommand{\coffeescript}{ \htmladdnormallink{CoffeeScript}{http://coffeescript.org/} } 
+\providecommand{\coffeescript}{ \htmladdnormallink{CoffeeScript}{http://coffeescript.org/} }%
+\providecommand{\sass}{ \htmladdnormallink{Sass}{http://sass-lang.com/} } 
 
 %
 \providecommand{\datetofill}{\rule{5mm}{.1pt}/\rule{5mm}{.1pt}/\rule{10mm}{.1pt}} 
@@ -1055,6 +1056,8 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1097,9 +1100,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline14786}%
+\lthtmlinlinemathA{tex2html_wrap_inline14841}%
 
-% latex2html id marker 14786
+% latex2html id marker 14841
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
