--- a/images.tex
+++ b/images.tex
@@ -1047,6 +1047,7 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{subsection}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1102,9 +1103,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline15085}%
+\lthtmlinlinemathA{tex2html_wrap_inline15107}%
 
-% latex2html id marker 15085
+% latex2html id marker 15107
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
