--- a/images.tex
+++ b/images.tex
@@ -1048,6 +1048,7 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1103,9 +1104,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline15107}%
+\lthtmlinlinemathA{tex2html_wrap_inline15133}%
 
-% latex2html id marker 15107
+% latex2html id marker 15133
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
