--- a/images.tex
+++ b/images.tex
@@ -1077,6 +1077,9 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{section}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1110,9 +1113,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline15656}%
+\lthtmlinlinemathA{tex2html_wrap_inline15722}%
 
-% latex2html id marker 15656
+% latex2html id marker 15722
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
