--- a/images.tex
+++ b/images.tex
@@ -1082,6 +1082,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1115,9 +1116,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline15793}%
+\lthtmlinlinemathA{tex2html_wrap_inline15826}%
 
-% latex2html id marker 15793
+% latex2html id marker 15826
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
