--- a/images.tex
+++ b/images.tex
@@ -1099,6 +1099,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{subsection}
 \stepcounter{subsection}
@@ -1121,9 +1122,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline16038}%
+\lthtmlinlinemathA{tex2html_wrap_inline16067}%
 
-% latex2html id marker 16038
+% latex2html id marker 16067
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
