--- a/images.tex
+++ b/images.tex
@@ -1132,9 +1132,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17398}%
+\lthtmlinlinemathA{tex2html_wrap_inline17425}%
 
-% latex2html id marker 17398
+% latex2html id marker 17425
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1261,6 +1261,7 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{section}
