--- a/images.tex
+++ b/images.tex
@@ -1132,9 +1132,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17514}%
+\lthtmlinlinemathA{tex2html_wrap_inline17629}%
 
-% latex2html id marker 17514
+% latex2html id marker 17629
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1267,6 +1267,8 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1281,6 +1283,8 @@ $ S = program$%
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{section}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
