--- a/images.tex
+++ b/images.tex
@@ -1115,6 +1115,9 @@ stringstyle=\color{orange}}
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{section}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1132,9 +1135,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17760}%
+\lthtmlinlinemathA{tex2html_wrap_inline17798}%
 
-% latex2html id marker 17760
+% latex2html id marker 17798
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
