--- a/images.tex
+++ b/images.tex
@@ -1118,6 +1118,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
@@ -1135,9 +1136,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17798}%
+\lthtmlinlinemathA{tex2html_wrap_inline17853}%
 
-% latex2html id marker 17798
+% latex2html id marker 17853
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
