--- a/images.tex
+++ b/images.tex
@@ -1140,9 +1140,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17973}%
+\lthtmlinlinemathA{tex2html_wrap_inline18012}%
 
-% latex2html id marker 17973
+% latex2html id marker 18012
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1269,6 +1269,7 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
