--- a/images.tex
+++ b/images.tex
@@ -1413,9 +1413,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline31753}%
+\lthtmlinlinemathA{tex2html_wrap_inline31792}%
 
-% latex2html id marker 31753
+% latex2html id marker 31792
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1600,6 +1600,7 @@ $ S = program$%
 \stepcounter{section}
 \stepcounter{section}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{subsection}
 \stepcounter{paragraph}
