--- a/images.tex
+++ b/images.tex
@@ -1413,9 +1413,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline41422}%
+\lthtmlinlinemathA{tex2html_wrap_inline41447}%
 
-% latex2html id marker 41422
+% latex2html id marker 41447
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1861,6 +1861,7 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{section}
