--- a/images.tex
+++ b/images.tex
@@ -1413,9 +1413,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline43606}%
+\lthtmlinlinemathA{tex2html_wrap_inline43630}%
 
-% latex2html id marker 43606
+% latex2html id marker 43630
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1503,6 +1503,24 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{section}
+{\newpage\clearpage
+\lthtmlinlinemathA{tex2html_wrap_inline45317}%
+$ MINUS(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathZ
+\lthtmlcheckvsize\clearpage}
+
+{\newpage\clearpage
+\lthtmlinlinemathA{tex2html_wrap_inline45319}%
+$ TIMES(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathZ
+\lthtmlcheckvsize\clearpage}
+
+{\newpage\clearpage
+\lthtmlinlinemathA{tex2html_wrap_inline45321}%
+$ DIV(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathZ
+\lthtmlcheckvsize\clearpage}
+
 \stepcounter{part}
 \stepcounter{chapter}
 \stepcounter{section}
