--- a/images.tex
+++ b/images.tex
@@ -1413,9 +1413,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline43630}%
+\lthtmlinlinemathA{tex2html_wrap_inline43642}%
 
-% latex2html id marker 43630
+% latex2html id marker 43642
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1504,20 +1504,20 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{section}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline45317}%
-$ MINUS(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathA{tex2html_wrap_inline45335}%
+$ TIMES(X, NUM_2)$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline45319}%
-$ TIMES(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathA{tex2html_wrap_inline45337}%
+$ 2^s$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline45321}%
-$ DIV(NUM_1, NUM_2) \Longrightarrow NUM_3$%
+\lthtmlinlinemathA{tex2html_wrap_inline45341}%
+$ \Longrightarrow SHIFTLEFT(X; NUM_3)$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
 
