--- a/images.tex
+++ b/images.tex
@@ -752,10 +752,10 @@ stringstyle=\color{orange}}
 \htmladdtonavigation{\htmladdnormallink{
      \htmladdimg[
                  width=35 
-                 alt="PL"
+                 alt="Apuntes de LPP"
                 ]
      {logoLPP.png}}
-     {http://nereida.deioc.ull.es/~plgrado/index.html}} 
+     {http://nereida.deioc.ull.es/perlexamples/index.html}} 
 
 
 \htmladdtonavigation{\htmladdnormallink{
@@ -1123,9 +1123,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline16157}%
+\lthtmlinlinemathA{tex2html_wrap_inline16159}%
 
-% latex2html id marker 16157
+% latex2html id marker 16159
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
