--- a/images.tex
+++ b/images.tex
@@ -1136,9 +1136,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline17897}%
+\lthtmlinlinemathA{tex2html_wrap_inline18004}%
 
-% latex2html id marker 17897
+% latex2html id marker 18004
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1262,6 +1262,11 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{subsection}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{subsection}
