--- a/images.tex
+++ b/images.tex
@@ -1008,6 +1008,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1146,9 +1147,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline18127}%
+\lthtmlinlinemathA{tex2html_wrap_inline18147}%
 
-% latex2html id marker 18127
+% latex2html id marker 18147
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
