--- a/images.tex
+++ b/images.tex
@@ -1012,6 +1012,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1150,9 +1151,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline18259}%
+\lthtmlinlinemathA{tex2html_wrap_inline18279}%
 
-% latex2html id marker 18259
+% latex2html id marker 18279
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
