--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline19412}%
+\lthtmlinlinemathA{tex2html_wrap_inline19444}%
 
-% latex2html id marker 19412
+% latex2html id marker 19444
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1312,5 +1312,6 @@ $ S = program$%
 \stepcounter{chapter}
 \stepcounter{section}
 \stepcounter{section}
+\stepcounter{paragraph}
 
 \end{document}
