--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline19528}%
+\lthtmlinlinemathA{tex2html_wrap_inline19667}%
 
-% latex2html id marker 19528
+% latex2html id marker 19667
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1311,6 +1311,12 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{chapter}
 \stepcounter{section}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{section}
