--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline19768}%
+\lthtmlinlinemathA{tex2html_wrap_inline19800}%
 
-% latex2html id marker 19768
+% latex2html id marker 19800
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1311,6 +1311,7 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{chapter}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
