--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline20369}%
+\lthtmlinlinemathA{tex2html_wrap_inline20398}%
 
-% latex2html id marker 20369
+% latex2html id marker 20398
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1323,6 +1323,7 @@ $ S = program$%
 \stepcounter{section}
 \stepcounter{paragraph}
 \stepcounter{section}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
