--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline20524}%
+\lthtmlinlinemathA{tex2html_wrap_inline20581}%
 
-% latex2html id marker 20524
+% latex2html id marker 20581
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1343,6 +1343,7 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{subsection}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 
 \end{document}
