--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline20604}%
+\lthtmlinlinemathA{tex2html_wrap_inline20658}%
 
-% latex2html id marker 20604
+% latex2html id marker 20658
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1343,6 +1343,8 @@ $ S = program$%
 \stepcounter{paragraph}
 \stepcounter{section}
 \stepcounter{subsection}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{subsection}
 
