--- a/images.tex
+++ b/images.tex
@@ -1165,9 +1165,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline20719}%
+\lthtmlinlinemathA{tex2html_wrap_inline20761}%
 
-% latex2html id marker 20719
+% latex2html id marker 20761
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -1349,5 +1349,6 @@ $ S = program$%
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
+\stepcounter{paragraph}
 
 \end{document}
