--- a/images.tex
+++ b/images.tex
@@ -1118,6 +1118,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1165,9 +1166,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline21102}%
+\lthtmlinlinemathA{tex2html_wrap_inline21149}%
 
-% latex2html id marker 21102
+% latex2html id marker 21149
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
