--- a/images.tex
+++ b/images.tex
@@ -1119,6 +1119,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1166,9 +1167,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline21155}%
+\lthtmlinlinemathA{tex2html_wrap_inline21189}%
 
-% latex2html id marker 21155
+% latex2html id marker 21189
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
