--- a/images.tex
+++ b/images.tex
@@ -1120,6 +1120,8 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1167,9 +1169,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline21194}%
+\lthtmlinlinemathA{tex2html_wrap_inline21234}%
 
-% latex2html id marker 21194
+% latex2html id marker 21234
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
