--- a/images.tex
+++ b/images.tex
@@ -1122,6 +1122,8 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{section}
 \stepcounter{section}
@@ -1169,9 +1171,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline21257}%
+\lthtmlinlinemathA{tex2html_wrap_inline21303}%
 
-% latex2html id marker 21257
+% latex2html id marker 21303
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
