--- a/images.tex
+++ b/images.tex
@@ -1162,6 +1162,7 @@ stringstyle=\color{orange}}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
+\stepcounter{paragraph}
 \stepcounter{subsection}
 \stepcounter{paragraph}
 \stepcounter{paragraph}
@@ -1180,9 +1181,9 @@ stringstyle=\color{orange}}
 \stepcounter{section}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline21841}%
+\lthtmlinlinemathA{tex2html_wrap_inline21867}%
 
-% latex2html id marker 21841
+% latex2html id marker 21867
 $ S = program$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
